--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,5 @@ notifications:
 #script:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 #  - julia -e 'Pkg.clone(pwd()); Pkg.build("WiltonInts84"); Pkg.test("WiltonInts84"; coverage=true)'
+after_success:
+  - julia -e 'cd(Pkg.dir("WiltonInts84")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder()); Codecov.submit(process_folder())'
