--- a/test/Project.toml
+++ b/test/Project.toml
@@ -6,6 +6,6 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-FastGaussQuadrature = "0.1, 0.2, 0.3, 0.4"
-JLD2 = "0.0.6, 0.1, 0.2, 0.3"
-StaticArrays = "0.12, 1.0"
+FastGaussQuadrature = "0.1, 0.2, 0.3, 0.4, 0.5"
+JLD2 = "0.0.6, 0.1, 0.2, 0.3, 0.4"
+StaticArrays = "0.12, 1"
